# docx_cpp_parser

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  batch_parser.cpp  docx_parser.cpp  pyproject.toml  python_bindings.cpp  setup.py  xml_parser.cpp  xml_parser.h
.github/workflows/: codeql.yml  python-publish.yml
include/: docx_comment_parser.h  zip_reader.h
python/: python_bindings.cpp
src/: batch_parser.cpp  docx_parser.cpp  xml_parser.cpp  zip_reader.cpp
tests/: CMakeLists.txt  test_docx_parser.cpp
